--- a/exe02/index.html
+++ b/exe02/index.html
@@ -9,13 +9,14 @@
             background-color: antiquewhite;
 
             display: flex;
+            flex-direction: row-reverse;
         }
 
         div.item {
             background-color: aqua;
             border: 1px solid black;
             text-align: center;
-            flex: auto;
+            padding: 10px;
         }
     </style>
 </head>
