--- a/exe06/index.html
+++ b/exe06/index.html
@@ -9,13 +9,16 @@
             background-color: antiquewhite;
 
             display: flex;
+            flex-flow: row wrap;
+            align-content: center;
+            height: 400px;
         }
 
         div.item {
             background-color: aqua;
             border: 1px solid black;
             text-align: center;
-            flex: auto;
+            padding: 40px;
         }
     </style>
 </head>
